{
    "name": "App_Input",
    "maps": [
        {
            "name": "Vr_Transforms",
            "id": "c07d24fa-7511-4f50-be35-b59bc59aade5",
            "actions": [
                {
                    "name": "Head_Position",
                    "type": "Value",
                    "id": "b0cc67c7-04cc-4856-9e10-612a3d43ee89",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Head_Rotation",
                    "type": "Value",
                    "id": "4d3350da-4737-46f4-9716-fc2ae323858b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hand_Left_Position",
                    "type": "Value",
                    "id": "82e05f90-f4d2-4db7-8076-95333fc5d1aa",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hand_Left_Rotation",
                    "type": "Value",
                    "id": "912d11fc-cee0-4320-8790-8e52f3a89d18",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hand_Right_Position",
                    "type": "Value",
                    "id": "b22fbcbd-cfa2-480e-9f2a-1a4d95caed4a",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hand_Right_Rotation",
                    "type": "Value",
                    "id": "cdb1b75c-de39-4d97-b3d1-aa07470a3bf6",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a72f70b0-a6e3-4842-b715-d0d9cb32d00b",
                    "path": "<XRHMD>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Head_Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d41e36f-9330-42db-8ea8-2c933055ee70",
                    "path": "<XRHMD>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Head_Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114376fa-1e3d-40d6-80d6-80f254c615e4",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand_Left_Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fa47599-f2ab-4b88-9e80-fc2fa3fac2b9",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand_Left_Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e01c87b2-6616-4b42-b648-5064ec9dcd98",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand_Right_Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62297f00-f6ce-4d3c-87c8-4672bebd0b3c",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand_Right_Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "VrInput",
            "id": "937cba72-ae89-4aca-8a20-48ef186c134c",
            "actions": [
                {
                    "name": "PullBow",
                    "type": "Button",
                    "id": "511d0d41-ea40-4ab0-9c30-39e30740a03c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "188da42c-f424-462e-b841-3d9ea4c92136",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "7b23d85e-c16b-4067-b357-57787f927d22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightThumb",
                    "type": "Value",
                    "id": "a10942c5-3fc0-4e7d-977e-8c92acb8f133",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18d04955-30ba-4aea-ba44-5a8d21e5b5a6",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullBow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1218889-d9bd-4a75-a6e4-21a34e482550",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullBow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2a51509-71df-4036-a5b4-2ae34a85a32b",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f98a77a7-3c2c-4e67-b021-22eff862f9a6",
                    "path": "<XRController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c84d6e0-9a8d-47da-9afd-01bae51b9c1e",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25af9202-b9bf-4310-b174-3b3e9bbe6ed7",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightThumb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Input",
            "id": "0d5a9afe-73df-4ca6-8f2b-7bfb8c2e0cf2",
            "actions": [
                {
                    "name": "Movement_Forward",
                    "type": "Button",
                    "id": "e84b7550-dee2-452d-a622-dc021594c0b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement_Strafe_Right",
                    "type": "Button",
                    "id": "12855027-229e-4f1e-887b-f34a99eb04b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement_Backward",
                    "type": "Button",
                    "id": "3f7a36e9-e6db-423e-b3f0-dac05f93d5ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement_Strafe_Left",
                    "type": "Button",
                    "id": "f6f9be93-4f63-4a7f-af9d-b7df09e49d6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "35943677-1604-4c84-9e65-995fb889cbe4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f86dd7cb-bac5-46b1-be1f-6b25df5fc5b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bf3d939-86de-4750-a073-97dc4c673402",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_Strafe_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43354654-1417-40bc-8c86-18db9e20279a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "728ea9d5-397a-4bfc-8462-aa52c34840b2",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_Strafe_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8a63e02-5092-4877-a865-c3193321a6ed",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}